--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,8 @@
   "description": "A Progressive Web App that displays accelerometer data.",
   "icons": [
       {
-          "src": "icons/icon-192.png",
+          "src": "icon-192.png",
           "sizes": "192x192",
-          "type": "image/png"
-      },
-      {
-          "src": "icons/icon-512.png",
-          "sizes": "512x512",
           "type": "image/png"
       }
   ]
